# currency_data

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
currency_data_exercise/: app.py  sql_utils.py
de_exercise_prt/: app.py  currency_ingestion.py  sql_utils.py
infrastructure/: compute.tf  database.tf  events.tf  repository.tf  security.tf  storage.tf  variables.tf
queries/: lambda_query.sql  query1.sql  query2.sql  query3.sql  schema.sql
